# zero2prod

./: .dockerignore  Cargo.toml  Dockerfile
.github/workflows/: general.yml
.sqlx/: query-0472a353a94f320367470b0437ffbb94ce381cead9aa901fe3c4a718dba938e9.json  query-427377ad644d5a0aa6de5a10dcdaf6187b581c75dea771cb715fe04025d02670.json  query-451fab3f5547403045e9056915fb2636a84a9e23e7717dec56dde7131f894dbe.json  query-4c5ab9f334cc56d10d6fd64b17b9215e9c9e664c5b1954d96c34c5b40eb3b74f.json  query-6debfe562f5b273fd1d90a07530817532711e75fb8aa4a626c9697f40337df61.json  query-771bcff31b853bcc1d6202ee7917004ebb761fa0fce795d3001777d8769c5155.json  query-80246d0ee089b12dfc2b5f202bc1aa467459e19d46d91a6213edf0bc9e8eca8e.json  query-8b64519959caf454a9a123298aada173c56fd15955a6039e508a1449ab349f18.json  query-a19997ff1e39cde8472c7084394597a8e1daaebb06728277ec3c56e05523a3f5.json  query-b92fd0077f2d32bb016a5913e7720c7c92b5a0fb3c14f786c8cc18c4996f5057.json  query-b9acf46924b5824f79edb3eb1c2127fb80775ecca271e7b7194900061a508f42.json  query-c7972b7f1f33bcff95899d0e62e50da06b006d75ba4aa65d08dc0a89f447048c.json  query-e259ca13ee71a3e986016371216c92de0e43a66a52a1ea57cd11620c7ebd8e1f.json  query-fe3578101ba8e1d02fc2fbb01e7d3c465c2f7f2e3c9b8c8556c5941f57597f6f.json
bash/: docker_build.sh  docker_run.sh  prepare.sh  test_log.sh  test_subscriptions.sh  watch.sh
configuration/: base.yaml  production.yaml
migrations/: 20250406131359_make_status_not_null_in_subscriptions.sql  20250406132037_create_subscription_tokens_table.sql  20250413181150_create_users_table.sql  20250417175347_seed_user.sql  20250419095247_create_idempotency_table.sql  20250419180005_relax_null_checks_on_idempotency.sql
scripts/: init_db.sh  init_redis.sh
src/: authentication.rs  configuration.rs  domain.rs  email_client.rs  issue_delivery_worker.rs  lib.rs  main.rs  session_state.rs  startup.rs  telemetry.rs  utility.rs
src/authentication/: middleware.rs  password.rs
src/domain/: mod.rs  new_subscriber.rs  subscriber_email.rs  subscriber_name.rs  subscription_token.rs
src/idempotency/: key.rs  persistence.rs
src/routes/: health_check.rs  home.rs  login.rs  newsletters.rs  subscriptions.rs  subscriptions_confirm.rs
src/routes/admin/: dashboard.rs  logout.rs  newsletters.rs
src/routes/admin/newsletters/: disable-submit-button.js  error.rs  get.rs  post.rs
src/routes/admin/password/: get.rs  post.rs
src/routes/login/: error.rs  get.rs  login.html  post.rs
src/routes/newsletters/: error.rs
src/routes/subscriptions/: error.rs
src/routes/subscriptions_confirm/: error.rs
tests/: health_check.rs  subscriptions.rs
tests/api/: admin_dashboard.rs  change_password.rs  health_check.rs  helpers.rs  login.rs  main.rs  newsletters.rs  subscriptions.rs  subscriptions_confirm.rs
tests/utility/: mod.rs
