[package]
name = "zero2prod"
version = "0.1.0"
authors = ["Frans S. Bothma fstefanusbothma@gmail.com"]
edition = "2024"

[dependencies]
actix-web = "4"
chrono = { version = "0.4.40", default-features = false, features = ["clock"] }
config = "0.15.11"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing = { version = "0.1.41", features = ["log"] }
tracing-bunyan-formatter = "0.3.10"
tracing-subscriber = { version = "0.3.19", features = ["registry", "env-filter"] }
uuid = { version = "1.16.0", features = ["v4"] }

[dev-dependencies]
reqwest = "0.12.15"
once_cell = "1.21.3"

[dependencies.sqlx]
version = "0.8.3"
default-features = false
features = [
	"runtime-tokio-rustls",
	"macros",
	"postgres",
	"uuid",
	"chrono",
	"migrate"
]
