[package]
name = "zero2prod"
version = "0.1.0"
authors = ["Frans S. Bothma fstefanusbothma@gmail.com"]
edition = "2024"

[dependencies]
actix-web = "4"
chrono = { version = "0.4.40", default-features = false, features = ["clock"] }
config = "0.15.11"
quickcheck = "1.0.3"
secrecy = { version = "0.10.3", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }
serde-aux = "4.6.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing = { version = "0.1.41", features = ["log"] }
tracing-actix-web = "0.7.16"
tracing-bunyan-formatter = "0.3.10"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.19", features = ["registry", "env-filter"] }
unicode-segmentation = "1.12.0"
uuid = { version = "1.16.0", features = ["v4"] }
validator = "0.16.0"

[dev-dependencies]
reqwest = "0.12.15"
once_cell = "1.21.3"
claims = "0.8.0"
fake = "4.2.0"
quickcheck_macros = "1.0.0"
rand = "0.9.0"

[dependencies.sqlx]
version = "0.8.3"
default-features = false
features = [
	"runtime-tokio-rustls",
	"macros",
	"postgres",
	"uuid",
	"chrono",
	"migrate"
]
