[package]
name = "zero2prod"
version = "0.1.0"
authors = ["Frans S. Bothma fstefanusbothma@gmail.com"]
edition = "2024"

[dependencies]
actix-session = { version = "0.10.1", features = ["redis-session-rustls"] }
actix-web = "4"
actix-web-flash-messages = { version = "0.5.0", features = ["cookies"] }
anyhow = "1.0.97"
argon2 = { version = "0.5.3", features = ["std"] }
base64 = "0.22.1"
chrono = { version = "0.4.40", default-features = false, features = ["clock"] }
config = "0.15.11"
quickcheck = "1.0.3"
rand = { version = "0.9.0", features = ["std_rng"] }
secrecy = { version = "0.10.3", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }
serde-aux = "4.6.0"
thiserror = "2.0.12"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing = { version = "0.1.41", features = ["log"] }
tracing-actix-web = "0.7.16"
tracing-bunyan-formatter = "0.3.10"
tracing-subscriber = { version = "0.3.19", features = ["registry", "env-filter"] }
unicode-segmentation = "1.12.0"
uuid = { version = "1.16.0", features = ["v4", "serde"] }
validator = "0.16.0"

[dev-dependencies]
once_cell = "1.21.3"
claims = "0.8.0"
fake = "4.2.0"
quickcheck_macros = "1.0.0"
rand = "0.9.0"
wiremock = "0.6.3"
serde_json = "1.0.140"
linkify = "0.10.0"

[dependencies.reqwest]
version = "0.12.15"
default-features = false
features = ["json", "rustls-tls", "cookies"]

[dependencies.sqlx]
version = "0.8.3"
default-features = false
features = [
	"runtime-tokio-rustls",
	"macros",
	"postgres",
	"uuid",
	"chrono",
	"migrate"
]
